--- a/package.json
+++ b/package.json
@@ -95,5 +95,8 @@
     "sinon": "^19.0.2",
     "supertest": "^7.0.0",
     "timekeeper": "^2.3.1"
+  },
+  "overrides": {
+    "diff": "^8.0.3"
   }
 }
